--- a/gdx-backend-bytecoder/pom.xml
+++ b/gdx-backend-bytecoder/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.libgdx.backends.bytecoder</groupId>
+    <groupId>com.squins.libgdx.backends.bytecoder</groupId>
     <artifactId>gdx-backend-bytecoder</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -30,7 +30,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.squins.coen.stage.libgdx.sample.app</groupId>
+            <groupId>com.squins.libgdx.backends.bytecoder.sample.app</groupId>
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
