--- a/libgdx-sample-app/gwt/build.gradle
+++ b/libgdx-sample-app/gwt/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'com.squins.coen.stage.libgdx.sample.app'
+group 'com.squins.libgdx.backends.bytecoder.sample.app'
 version '1.0-SNAPSHOT'
 
 repositories {
