--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.squins.bytecoder.app</groupId>
-    <artifactId>app</artifactId>
+    <artifactId>libGDX-wasm-bytecoder</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -14,4 +14,5 @@
         <module>gdx-backend-bytecoder</module>
         <module>gdx-backend-bytecoder-example</module>
     </modules>
+
 </project>
