--- a/gdx-backend-bytecoder-example/pom.xml
+++ b/gdx-backend-bytecoder-example/pom.xml
@@ -3,29 +3,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.bytecoder.example.app</groupId>
+    <parent>
+        <groupId>com.squins.libgdx.backends.bytecoder</groupId>
+        <artifactId>gdx-backend-bytecoder-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>gdx-backend-bytecoder-example</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
     <packaging>jar</packaging>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <kotlin.version>1.3.21</kotlin.version>
-        <!--        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>-->
-        <bytecoder.version>2020-10-05</bytecoder.version>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>de.mirkosertic.bytecoder</groupId>
-            <artifactId>bytecoder.web</artifactId>
-            <version>${bytecoder.version}</version>
         </dependency>
 
         <dependency>
@@ -39,25 +31,14 @@
             <artifactId>gdx-backend-bytecoder</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.squins.bytecoder.app</groupId>
-            <artifactId>libgdx-sample-app</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>pom</type>
-        </dependency>
-
     </dependencies>
-
     <build>
-
-        <sourceDirectory>${project.basedir}/src</sourceDirectory>
+        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
-
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -67,7 +48,6 @@
                     </execution>
                 </executions>
             </plugin>
-
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -80,20 +60,11 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <minimizeJar>true</minimizeJar>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -123,9 +94,10 @@
                         <phase>package</phase>
                         <configuration>
                             <tasks>
-                                <copy file="./prod/index.html" todir="./target/bytecoder/"/>
+                                <copy todir="./target/bytecoder/">
+                                    <fileset dir="prod"/>
+                                </copy>
                                 <copy file="../libgdx-sample-app/core/assets/sample.mp3" todir="./target/bytecoder"/>
-<!--                                <delete file="./dependency-reduced-pom.xml"/>-->
                             </tasks>
                         </configuration>
                         <goals>
@@ -134,9 +106,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
-
     </build>
-
 </project>
