--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,38 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.squins.bytecoder.app</groupId>
-    <artifactId>libGDX-wasm-bytecoder</artifactId>
+    <groupId>com.squins.libgdx.backends.bytecoder</groupId>
+    <artifactId>gdx-backend-bytecoder-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <properties>
+        <bytecoder.version>2020-10-05</bytecoder.version>
+        <gdx.version>1.9.11</gdx.version>
+        <kotlin.version>1.3.72</kotlin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 
     <modules>
         <module>gdx-backend-bytecoder</module>
         <module>gdx-backend-bytecoder-example</module>
     </modules>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
