--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <bytecoder.version>2020-10-05</bytecoder.version>
+        <bytecoder.version>0-SNAPSHOT</bytecoder.version>
         <gdx.version>1.9.11</gdx.version>
         <kotlin.version>1.3.72</kotlin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
