--- a/gdx-backend-bytecoder-shaded/pom.xml
+++ b/gdx-backend-bytecoder-shaded/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>gdx-backend-bytecoder</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx</artifactId>
+            <version>1.9.11-1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
