Some more steps toward working assetloader

--- a/gdx-backend-bytecoder-example/pom.xml
+++ b/gdx-backend-bytecoder-example/pom.xml
@@ -29,7 +29,7 @@
                 <version>${bytecoder.version}</version>
                 <configuration>
                     <mainClass>main.Main</mainClass>
-                    <backend>wasm_llvm</backend>
+                    <backend>wasm</backend>
                     <filenamePrefix>main</filenamePrefix>
                     <enableExceptionHandling>false</enableExceptionHandling>
                     <optimizationLevel>ALL</optimizationLevel>
@@ -53,7 +53,7 @@
                                     <fileset dir="prod"/>
                                 </copy>
                                 <copy file="../libgdx-sample-app/core/assets/sample.mp3" todir="./target/bytecoder"/>
-                                <copy file="../gdx-backend-bytecoder-example/prod/badlogic.jpg" todir="./target/bytecoder"/>
+                                <copy file="../gdx-backend-bytecoder-example/prod/badlogic.jpg" todir="./target/bytecoder/assets"/>
                             </tasks>
                         </configuration>
                         <goals>
