--- a/gdx-backend-bytecoder-shaded/pom.xml
+++ b/gdx-backend-bytecoder-shaded/pom.xml
@@ -110,9 +110,13 @@
                                         <exclude>com/badlogic/gdx/files/FileHandleStream.class</exclude>
                                         <exclude>com/badlogic/gdx/utils/BufferUtils.class</exclude>
                                         <exclude>com/badlogic/gdx/assets/loaders/TextureLoader.class</exclude>
+                                        <exclude>com/badlogic/gdx/assets/loaders/CubemapLoader.class</exclude>
+                                        <exclude>com/badlogic/gdx/assets/loaders/resolvers/ResolutionFileResolver.class</exclude>
                                         <exclude>com/badlogic/gdx/assets/AssetLoadingTask.class</exclude>
                                         <exclude>com/badlogic/gdx/graphics/Pixmap.class</exclude>
                                         <exclude>com/badlogic/gdx/graphics/TextureData.class</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/glutils/FileTextureData</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/glutils/ETC1TextureData</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
