--- a/gdx-backend-bytecoder-shaded/pom.xml
+++ b/gdx-backend-bytecoder-shaded/pom.xml
@@ -101,6 +101,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>true</createDependencyReducedPom>
+                            <dependencyReducedPomLocation>{project.build.directory}</dependencyReducedPomLocation>
                             <minimizeJar>true</minimizeJar>
                             <filters>
                                 <filter>
