--- a/gdx-backend-bytecoder-shaded/pom.xml
+++ b/gdx-backend-bytecoder-shaded/pom.xml
@@ -101,7 +101,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>true</createDependencyReducedPom>
-                            <dependencyReducedPomLocation>{project.build.directory}</dependencyReducedPomLocation>
+                            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                             <minimizeJar>true</minimizeJar>
                             <filters>
                                 <filter>
@@ -111,13 +111,23 @@
                                         <exclude>com/badlogic/gdx/files/FileHandleStream.class</exclude>
                                         <exclude>com/badlogic/gdx/utils/BufferUtils.class</exclude>
                                         <exclude>com/badlogic/gdx/assets/loaders/TextureLoader.class</exclude>
+                                        <exclude>com/badlogic/gdx/assets/loaders/TextureLoader$TextureParameter.class</exclude>
                                         <exclude>com/badlogic/gdx/assets/loaders/CubemapLoader.class</exclude>
+                                        <exclude>com/badlogic/gdx/assets/loaders/CubemapLoader$CubemapLoaderInfo.class</exclude>
+                                        <exclude>com/badlogic/gdx/assets/loaders/CubemapLoader$CubemapParameter.class</exclude>
                                         <exclude>com/badlogic/gdx/assets/loaders/resolvers/ResolutionFileResolver.class</exclude>
                                         <exclude>com/badlogic/gdx/assets/AssetLoadingTask.class</exclude>
                                         <exclude>com/badlogic/gdx/graphics/Pixmap.class</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/Pixmap$Blending.class</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/Pixmap$Format.class</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/Pixmap$Filter.class</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/Pixmap.class</exclude>
                                         <exclude>com/badlogic/gdx/graphics/TextureData.class</exclude>
-                                        <exclude>com/badlogic/gdx/graphics/glutils/FileTextureData</exclude>
-                                        <exclude>com/badlogic/gdx/graphics/glutils/ETC1TextureData</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/TextureData$TextureDataType.class</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/TextureData$Factory.class</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/glutils/FileTextureData.class</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/glutils/ETC1TextureData.class</exclude>
+                                        <exclude>com/badlogic/gdx/graphics/glutils/ShaderProgram.class</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
