try out for more assets

--- a/gdx-backend-bytecoder-example/pom.xml
+++ b/gdx-backend-bytecoder-example/pom.xml
@@ -53,7 +53,9 @@
                                     <fileset dir="prod"/>
                                 </copy>
                                 <copy file="../libgdx-sample-app/core/assets/sample.mp3" todir="./target/bytecoder"/>
+                                <copy file="../libgdx-sample-app/core/assets/sample.mp3" todir="./target/bytecoder/assets"/>
                                 <copy file="../gdx-backend-bytecoder-example/prod/badlogic.jpg" todir="./target/bytecoder/assets"/>
+                                <copy file="../gdx-backend-bytecoder-example/prod/badlogic1.jpg" todir="./target/bytecoder/assets"/>
                                 <copy file="../gdx-backend-bytecoder-example/prod/assets/assets.txt" todir="./target/bytecoder/assets"/>
                             </tasks>
                         </configuration>
