--- a/gdx-backend-bytecoder/pom.xml
+++ b/gdx-backend-bytecoder/pom.xml
@@ -41,6 +41,11 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>1.24.1</version>
+        </dependency>
     </dependencies>
 
     <build>
