--- a/gdx-backend-bytecoder-shaded/pom.xml
+++ b/gdx-backend-bytecoder-shaded/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>com.badlogicgames.gdx</groupId>
             <artifactId>gdx</artifactId>
-            <version>1.9.11-1-SNAPSHOT</version>
+            <version>${gdx.version}</version>
         </dependency>
     </dependencies>
     <build>
