replace if index.html  exists

--- a/gdx-backend-bytecoder-example/pom.xml
+++ b/gdx-backend-bytecoder-example/pom.xml
@@ -77,7 +77,10 @@
                 outputDirectory
                 );
             generator.generate();
-            java.nio.file.Files.copy(new File(myBaseDir + "/prod/index.html").toPath(), new File(myBaseDir + "/target/bytecoder/index.html").toPath());
+            java.nio.file.Files.copy(new File(myBaseDir + "/prod/index.html").toPath(),
+                                     new File(myBaseDir + "/target/bytecoder/index.html").toPath(),
+                                     java.nio.file.StandardCopyOption.REPLACE_EXISTING
+                                     );
             log.info("Completed generation of assets");
           ]]></script>
                     </scripts>
