--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <properties>
         <bytecoder.version>0-SNAPSHOT</bytecoder.version>
-        <gdx.version>1.9.11-1-SNAPSHOT</gdx.version>
+        <gdx.version>1.9.11</gdx.version>
         <kotlin.version>1.4.10</kotlin.version>
         <maven.test.skip>false</maven.test.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
