--- a/gdx-backend-bytecoder-example/pom.xml
+++ b/gdx-backend-bytecoder-example/pom.xml
@@ -32,7 +32,7 @@
                 <version>${bytecoder.version}</version>
                 <configuration>
                     <mainClass>main.Main</mainClass>
-                    <backend>wasm_llvm</backend>
+                    <backend>js</backend>
                     <filenamePrefix>main</filenamePrefix>
                     <enableExceptionHandling>false</enableExceptionHandling>
                     <optimizationLevel>ALL</optimizationLevel>
